use ID instead of count